@@ -8,6 +8,7 @@ HBase Change Log
                write-ahead-log edits
    HBASE-646   EOFException opening HStoreFile info file (spin on HBASE-645 and 550)
    HBASE-648   If mapfile index is empty, run repair
+   HBASE-659   HLog#cacheFlushLock not cleared; hangs a region
 
 Release 0.1.2 - 05/13/2008
 
